added button id and other innerHTML text

--- a/src/app/car-search/car-search.component.html
+++ b/src/app/car-search/car-search.component.html
@@ -60,8 +60,8 @@
                 <input type="checkbox" id="new-cars">
                 <label for="new-cars">nur Neu- und Jungwagen</label>
             </div>
-            <button (click)="countCars()">
-                {{ counter }} Fahrzeuge anzeigen
+            <button id="showCarListButton" (click)="countCars()">
+                {{ counter }} {{carListButtonText}}
             </button>
         </form>
     </div>
